--- a/src/Components/Display_card/display_card.module.scss
+++ b/src/Components/Display_card/display_card.module.scss
@@ -33,7 +33,7 @@
                 linear-gradient(transparent, rgba(0, 0, 0, .7), black);
             width: 100%;
             border-top-right-radius: 30px;
-            transition: all 500ms ease-in-out;
+            transition: all 500ms;
 
             &:hover {
                 opacity: 0;
