--- a/src/Components/Loading-spinner/loading.module.scss
+++ b/src/Components/Loading-spinner/loading.module.scss
@@ -1,6 +1,6 @@
 .loading {
     width: 50%;
-    height: 50%;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
