--- a/src/Components/Base_information/base_information.module.scss
+++ b/src/Components/Base_information/base_information.module.scss
@@ -1,30 +1,37 @@
-.mainInfo {
-    width: 100%;
-
-    @media screen and (min-width: 1440px) {
+.Main {
+    .mainInfo {
         width: 100%;
-    }
 
-    .vids {
-        position: relative;
-        width: 450px;
-        height: 250px;
-        margin-right: 3rem;
+        @media screen and (min-width: 1440px) {
+            width: 100%;
+        }
 
-        .overlay {
-            position: absolute;
-            height: 100%;
-            inset: 0;
-            background-color: rgba(0, 0, 0, .5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        .vids {
+            position: relative;
+            width: 450px;
+            height: 250px;
+            margin-right: 3rem;
 
-            .play {
-                font-size: 27px;
+            .overlay {
+                position: absolute;
+                height: 100%;
+                inset: 0;
+                background-color: rgba(0, 0, 0, .5);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .play {
+                    font-size: 27px;
+                }
             }
         }
+
     }
 
-    
+    .ast {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
